# agentswitch

./: README.md  app.py  mux-chat.sh  mux-claude.sh  mux-codex.sh  mux-cursor.sh  mux-gemini.sh  mux-readonly.sh  mux.sh  pyproject.toml  requirements.txt
agentchat/: __init__.py  __main__.py  agent.py  app.py  bus.py  session.py
agentswitch/: __init__.py  __main__.py  _subprocess.py  config.py  discovery.py  errors.py  interactive.py  models.py  router.py  session.py  types.py
agentswitch/providers/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py
tests/: test_providers_live.py
